--- a/factions/Moja_Era-Frakcja1.cfg
+++ b/factions/Moja_Era-Frakcja1.cfg
@@ -5,6 +5,6 @@
     image=frakcja1/chlop.png
     {MAGENTA_IS_THE_TEAM_COLOR}
     type=TheGoreYarn_Chlop
-    leader=TheGoreYarn_Chlop
+    leader=Paladin
     recruit=TheGoreYarn_Chlop
 [/multiplayer_side]
