--- a/units/frakcja1/Paladyn.cfg
+++ b/units/frakcja1/Paladyn.cfg
@@ -1,40 +1,41 @@
 [unit_type]
-    id=TheGoreYarn_Chlop
-    name= _ "Chlop"
+    id=Paladyn
+    name= _ "Paladyn"
     race=human
-    image="frakcja1/chlop.png"
+    image="frakcja1/Paladyn.png"
     ellipse="misc/ellipse-nozoc"
     {MAGENTA_IS_THE_TEAM_COLOR}
-    hitpoints=18
+    hitpoints=48
     movement_type=smallfoot
-    movement=5
-    experience=23
-    level=0
+    movement=6
+    experience=48
+    level=2
     alignment=lawful
-    advances_to=Spearman,Bowman
+    advances_to=
     cost=8
     usage=fighter
-    description= _ "opis"
+    description= _ "Paladyni są wirtuozami obrony w obliczu słabych, niestrudzonych zastępów Nieumarłych. Łącząc zdolności wojownika oraz kapłana światłości paladyni są twardymi przeciwnikami w walce wręcz. Tradycja światłości jest dana tylko kilku rasom Przymierza oraz Krwawym elfom i Taurenom z Hordy. "
     die_sound={SOUND_LIST:HUMAN_DIE}
     {DEFENSE_ANIM "frakcja1/chlop-defend.png" "frakcja1/chlop.png" {SOUND_LIST:HUMAN_OLD_HIT} }
     [attack]
-        name=widly
-        description=_"widly"
-        type=pierce
+        name=The Holy Strike
+        description=_"The Holy Strike"
+        type=impact
         range=melee
-        damage=5
-        number=2
+        damage=10
+        number=3
         icon=attacks/pitchfork.png
     [/attack]
     [attack]
-        name=rzut
-        description=_"rzut widlami"
-        type=pierce
+        name=The Holy Light
+        description=_"The Holy Light"
+        type=arcane
         range=ranged
-        damage=4
+        damage=25
         number=1
         icon=attacks/pitchfork.png
     [/attack]
+	
     [attack_anim]
         [filter_attack]
             name=rzut
