Zdolności ataków paladyna

--- a/_main.cfg
+++ b/_main.cfg
@@ -25,4 +25,22 @@
     {~add-ons/TheGoreYarn/units}
     {~add-ons/TheGoreYarn/units/frakcja1}
 [/units]
+
+[+language]
+	type_Holy= _ "Holy"
+	type_bomb= _ "bomb"
+    type_bullet= _ "bullet"
+	type_cannon= _ "cannon"
+	type_flak= _ "flak"
+	type_grenade= _ "grenade"
+	type_missile= _ "missile"
+	type_torpedo= _ "torpedo"
+	type_depthcharges= _ "deptchcharges"
+	
+	#range_close= _ "close"
+	#range_ranged= _ "ranged"
+	#range_above= _ "above"
+	#range_far= _"far"
+[/language]
+
 #endif
