--- a/units/frakcja1/Paladyn.cfg
+++ b/units/frakcja1/Paladyn.cfg
@@ -27,14 +27,24 @@
         damage=10
         number=3
         icon=attacks/holy-hammer.png
-    [/attack]
+		parry=-10
+		increase_accuracy= 20
+		[specials]
+		{WEAPON_SPECIAL_MAGICAL}
+		[/specials]   
+   [/attack]
     [attack]
         name=The Holy Light
         description=_"The Holy Light"
         type=arcane
         range=ranged
-        damage=25
-        number=1
+        damage=18
+        number=2
         icon=attacks/lightbeam.png
-    [/attack]
+		increase_parry=-10
+		accuracy= 20
+		[specials]
+		{WEAPON_SPECIAL_MAGICAL}
+		[/specials]
+   [/attack]
 [/unit_type]
