--- a/units/frakcja1/Paladyn.cfg
+++ b/units/frakcja1/Paladyn.cfg
@@ -27,24 +27,38 @@
         damage=10
         number=3
         icon=attacks/holy-hammer.png
-		parry=-10
-		increase_accuracy= 20
-		[specials]
+ 		[specials]
 		{WEAPON_SPECIAL_MAGICAL}
-		[/specials]   
+		[/specials]  
+		parry=10
+		accuracy=00
    [/attack]
     [attack]
         name=The Holy Light
         description=_"The Holy Light"
         type=arcane
         range=ranged
-        damage=18
+        damage=18	
         number=2
         icon=attacks/lightbeam.png
-		increase_parry=-10
-		accuracy= 20
+		parry=10
+		accuracy=00
 		[specials]
 		{WEAPON_SPECIAL_MAGICAL}
-		[/specials]
+		[/specials]  
+   [/attack]
+       [attack]
+        name=The Holy Shield
+        description=_"The Holy Shield"
+        type=arcane
+        range=ranged
+        damage=-
+        number=0
+        icon=attacks/lightbeam.png
+		parry=40
+		accuracy=00
+		[specials]
+		{WEAPON_SPECIAL_MAGICAL}
+		[/specials]  
    [/attack]
 [/unit_type]
