--- a/units/frakcja1/Paladyn.cfg
+++ b/units/frakcja1/Paladyn.cfg
@@ -35,7 +35,7 @@
    [/attack]
     [attack]
         name=The Holy Light
-        description=_"The Holy Light"
+        description=_"The Holy Shine"
         type=arcane
         range=ranged
         damage=18	
