--- a/units/frakcja1/Paladyn.cfg
+++ b/units/frakcja1/Paladyn.cfg
@@ -43,6 +43,7 @@
         icon=attacks/lightbeam.png
 		parry=10
 		accuracy=00
+	defense_weight=0
 		[specials]
 		{WEAPON_SPECIAL_MAGICAL}
 		[/specials]  
@@ -55,8 +56,9 @@
         damage=-
         number=0
         icon=attacks/lightbeam.png
-		parry=40
+		parry=60
 		accuracy=00
+	attack_weight=0
 		[specials]
 		{WEAPON_SPECIAL_MAGICAL}
 		[/specials]  
