--- a/units/frakcja1/Paladyn.cfg
+++ b/units/frakcja1/Paladyn.cfg
@@ -2,7 +2,7 @@
     id=Paladyn
     name= _ "Paladyn"
     race=human
-    image="frakcja1/Paladyn.png"
+    image="frakcja1/Paladyn/Paladyn.png"
     ellipse="misc/ellipse-nozoc"
     {MAGENTA_IS_THE_TEAM_COLOR}
     hitpoints=48
@@ -63,4 +63,20 @@
 		{WEAPON_SPECIAL_MAGICAL}
 		[/specials]  
    [/attack]
+   
+  [attack_anim]
+		[filter_attack]
+            name=The Holy Strike
+        [/filter_attack]
+		
+			start_time=-325
+			[frame]
+				image="frakcja1/Paladyn/Paladyn.png:75"
+			[/frame]
+			
+			[frame]
+				image="frakcja1/Paladyn/atack-anim/attack-[1~5,4,2].png:75"
+			[/frame]
+    [/attack_anim]
+	
 [/unit_type]
