--- a/units/frakcja1/Paladyn.cfg
+++ b/units/frakcja1/Paladyn.cfg
@@ -34,13 +34,13 @@
 		accuracy=00
    [/attack]
     [attack]
-        name=The Holy Light
+        name=The Holy Shine
         description=_"The Holy Shine"
         type=arcane
         range=ranged
         damage=18	
         number=2
-        icon=attacks/lightbeam.png
+        icon=attacks/HolyShine.png
 		parry=10
 		accuracy=00
 	defense_weight=0
@@ -79,4 +79,13 @@
 			[/frame]
     [/attack_anim]
 	
+	[death]
+        [filter_attack]
+            type=arcane,fire,cold,blade,impact,pierce
+        [/filter_attack]
+        start_time=0
+        [frame]
+            image="frakcja1/Paladyn/die-anim/die-[1~10].png:120"
+        [/frame]
+    [/death]
 [/unit_type]
