--- a/units/frakcja1/Paladyn.cfg
+++ b/units/frakcja1/Paladyn.cfg
@@ -6,7 +6,7 @@
     ellipse="misc/ellipse-nozoc"
     {MAGENTA_IS_THE_TEAM_COLOR}
     hitpoints=48
-    movement_type=smallfoot
+    movement_type=lightstep
     movement=6
     experience=48
     level=2
@@ -53,10 +53,10 @@
         description=_"The Holy Shield"
         type=arcane
         range=ranged
-        damage=-
-        number=0
+        damage=00
+        number=1
         icon=attacks/lightbeam.png
-		parry=60
+		parry=49
 		accuracy=00
 	attack_weight=0
 		[specials]
@@ -79,13 +79,40 @@
 			[/frame]
     [/attack_anim]
 	
+	[attack_anim]
+        [filter_attack]
+            name=The Holy Shine
+        [/filter_attack]
+        {MISSILE_FRAME_LIGHT_BEAM}
+
+        start_time=-395
+        [frame]
+            image="frakcja1/Paladyn/die-anim/die-[1,2].png:75"
+        [/frame]
+        [frame]
+            image="frakcja1/Paladyn/die-anim/die-3.png"
+        [/frame]
+        {SOUND:HIT_AND_MISS {SOUND_LIST:HOLY} {SOUND_LIST:HOLY_MISS} -75}
+        [frame]
+            image="frakcja1/Paladyn/die-anim/die-[2,1].png:50"
+        [/frame]
+    [/attack_anim]
+	
+	[attack_anim]
+        [filter_attack]
+            name=The Holy Shield
+        [/filter_attack]
+		start_time=250
+				halo=halo/illuminates-aura.png:150
+    [/attack_anim]
+	
 	[death]
         [filter_attack]
             type=arcane,fire,cold,blade,impact,pierce
         [/filter_attack]
         start_time=0
         [frame]
-            image="frakcja1/Paladyn/die-anim/die-[1~10].png:120"
+            image="frakcja1/Paladyn/die-anim/die-[1~10].png:80"
         [/frame]
     [/death]
 [/unit_type]
