--- a/macros/animation-utils.cfg
+++ b/macros/animation-utils.cfg
@@ -7,18 +7,16 @@
         direction=n,ne,nw
 
         [missile_frame]
-            halo="halo/holy/holy-beam-[1~7,6~1].png:[30*6,130,70*6]"
+            halo="halo/holy-beam-[1~7,6~1].png:[30*6,130,70*6]"
             offset=1.0
         [/missile_frame]
     [/if]
     [else]
         direction=s,se,sw
-
+	
         [missile_frame]
-            halo="halo/holy/holy-beam-[1~7,6~1].png~FL(vert):[30*6,130,70*6]"
+            halo="halo/holy-beam-[1~7,6~1].png~FL(vert):[30*6,130,70*6]"
             offset=1.0
         [/missile_frame]
     [/else]
-#enddef
-#enddef
 #enddef
