beam z light na holy

--- a/units/frakcja1/Paladyn.cfg
+++ b/units/frakcja1/Paladyn.cfg
@@ -83,7 +83,7 @@
         [filter_attack]
             name=The Holy Shine
         [/filter_attack]
-        {MISSILE_FRAME_LIGHT_BEAM}
+        {MISSILE_FRAME_HOLY_BEAM}
 
         start_time=-395
         [frame]
