--- a/factions/TheGoreYarn-Frakcja1.cfg
+++ b/factions/TheGoreYarn-Frakcja1.cfg
@@ -1,10 +1,10 @@
 #textdomain wesnoth-TheGoreYarn
 [multiplayer_side]
     id=frakcja1
-    name= _ "Frakcja 1"
-    image=frakcja1/chlop.png
+    name= _ "Ludzie"
+    image=frakcja1/Paladyn/Paladyn.png
     {MAGENTA_IS_THE_TEAM_COLOR}
     type=TheGoreYarn_Chlop
     leader=Paladyn
-    recruit=
+    recruit=Paladyn
 [/multiplayer_side]
