--- a/TheGoreYarn_Eras.cfg
+++ b/TheGoreYarn_Eras.cfg
@@ -11,11 +11,12 @@
 [/era]
 
 [era]
-    id=TheGoreYarn_Domyslna
-    name= _ "Moja Era + Domyslna"
+    id=TheGoreYarn2
+    name= _ "Wojna światow"
     require_era=yes
 
     {RANDOM_SIDE}
+	{TheGoreYarn_SIDE TheGoreYarn Frakcja1}
     {multiplayer/factions/loyalists-default.cfg}
     {multiplayer/factions/rebels-default.cfg}
     {multiplayer/factions/northerners-default.cfg}
