--- a/units/Eras.cfg
+++ b/units/Eras.cfg
@@ -1,4 +1,24 @@
 
+	[race]
+		id=mankind
+		male_name= _ male^Troll
+		female_name= _ female^Troll
+		plural_name= _ plural^Troll
+		description== _"opis"
+		num_traits=3
+		undead_variation=troll
+		ignore_global_traits=yes
+			{TRAIT_STRONG}
+			{TRAIT_QUICK}
+			{TRAIT_RESILIENT}
+			{TRAIT_FEARLESS}
+			{TRAIT_OLD_HERO}			
+	[/race]
+
+
+
+
+
 #Movement Types
 [movetype]
         name=lightstep
