--- a/units/frakcja1/Paladyn.cfg
+++ b/units/frakcja1/Paladyn.cfg
@@ -1,7 +1,7 @@
 [unit_type]
     id=Paladyn
     name= _ "Paladyn"
-    race=human
+    race=mankid
     image="frakcja1/Paladyn/Paladyn.png"
     ellipse="misc/ellipse-nozoc"
     {MAGENTA_IS_THE_TEAM_COLOR}
