--- a/macros/traits.cfg
+++ b/macros/traits.cfg
@@ -2,6 +2,7 @@
 # Traits for the [modifications] clause of SingleWML descriptions
 
 
+
 #define TRAIT_OLD_HERO
     # Units with trait Old Hero get a +1 to ranged damage.
     [trait]
@@ -16,7 +17,21 @@
 		[effect]
             apply_to=attack
             range=ranged
-            increase_damage=3
+            increase_damage=2
+        [/effect]
+    [/trait]
+#enddef
+
+#define TRAIT_MAGE
+    # Units with trait Old Hero get a +1 to ranged damage.
+    [trait]
+        id=mage
+        male_name= _ "Mage"
+        female_name= _ "female^old hero"
+		[effect]
+            apply_to=attack
+            range=ranged
+            increase_damage=5
         [/effect]
     [/trait]
 #enddef
