--- a/units/Eras.cfg
+++ b/units/Eras.cfg
@@ -1,22 +1,27 @@
 
-	[race]
-		id=mankind
-		male_name= _ male^Troll
-		female_name= _ female^Troll
-		plural_name= _ plural^Troll
-		description== _"opis"
-		num_traits=3
+[race]
+        id=mankind
+        male_name= _ "race^Mankind"
+        female_name= _ "race+female^Mankind"
+        plural_name= _ "race^People"
+        description= ""	# wmllint: ignore
+        num_traits=1
+        markov_chain_size=10
 		undead_variation=troll
 		ignore_global_traits=yes
+        male_names= _ "Facet"
+        female_names= _ "Niewiasta"
 			{TRAIT_STRONG}
 			{TRAIT_QUICK}
 			{TRAIT_RESILIENT}
 			{TRAIT_FEARLESS}
-			{TRAIT_OLD_HERO}			
-	[/race]
-
-
-
+			{TRAIT_OLD_HERO}
+			{TRAIT_LOYAL}
+			{TRAIT_STRONG}
+			{TRAIT_RESILIENT}
+			{TRAIT_INTELLIGENT}
+			{TRAIT_MAGE}
+[/race]
 
 
 #Movement Types
