--- a/units/Eras.cfg
+++ b/units/Eras.cfg
@@ -67,3 +67,47 @@
             arcane=00
         [/resistance]
     [/movetype]
+#Movement Types
+[movetype]
+        name=lightstep2
+        [movement_costs]
+            deep_water=9
+            shallow_water=4
+            reef=3
+            swamp_water=3
+            flat=1
+            sand=2
+            forest=2
+            hills=2
+            mountains=3
+            village=1
+            castle=1
+            cave=2
+            frozen=2
+            fungus=2
+        [/movement_costs]
+        [defense]
+            deep_water=80
+            shallow_water=70
+            reef=70
+            swamp_water=70
+            flat=60
+            sand=70
+            forest=40
+            hills=50
+            mountains=40
+            village=40
+            castle=40
+            cave=50
+            frozen=40
+            fungus=50
+        [/defense]
+        [resistance]
+            blade=90
+            pierce=100
+            impact=90
+            fire=150
+            cold=150
+            arcane=00
+        [/resistance]
+    [/movetype]
