Puste foldery pod nacje

--- a/TheGoreYarn_Eras.cfg
+++ b/TheGoreYarn_Eras.cfg
@@ -8,6 +8,9 @@
 
     {RANDOM_SIDE}
     {TheGoreYarn_SIDE TheGoreYarn Frakcja1}
+	{TheGoreYarn_SIDE TheGoreYarn Frakcja2}
+	{TheGoreYarn_SIDE TheGoreYarn Frakcja3}
+	{TheGoreYarn_SIDE TheGoreYarn Frakcja4}
 [/era]
 
 [era]
@@ -17,6 +20,9 @@
 
     {RANDOM_SIDE}
 	{TheGoreYarn_SIDE TheGoreYarn Frakcja1}
+	{TheGoreYarn_SIDE TheGoreYarn Frakcja2}
+	{TheGoreYarn_SIDE TheGoreYarn Frakcja3}
+	{TheGoreYarn_SIDE TheGoreYarn Frakcja4}
     {multiplayer/factions/loyalists-default.cfg}
     {multiplayer/factions/rebels-default.cfg}
     {multiplayer/factions/northerners-default.cfg}
