--- a/_main.cfg
+++ b/_main.cfg
@@ -24,6 +24,9 @@
 [units]
     {~add-ons/TheGoreYarn/units}
     {~add-ons/TheGoreYarn/units/frakcja1}
+	{~add-ons/TheGoreYarn/units/frakcja2}
+	{~add-ons/TheGoreYarn/units/frakcja3}
+	{~add-ons/TheGoreYarn/units/frakcja4}
 [/units]
 
 [+language]
