--- a/factions/TheGoreYarn-Frakcja2.cfg
+++ b/factions/TheGoreYarn-Frakcja2.cfg
@@ -5,6 +5,6 @@
     image=frakcja1/Paladyn/Paladyn.png
     {MAGENTA_IS_THE_TEAM_COLOR}
     type=TheGoreYarn_Chlop
-    leader=Paladyn,,Militia-Squad
-    recruit=Worker,Priest,Militia,Militia-Patrol
+    leader=Grunt
+    recruit=Grunt
 [/multiplayer_side]
