--- a/units/Eras.cfg
+++ b/units/Eras.cfg
@@ -22,6 +22,27 @@
 			{TRAIT_MAGE}
 [/race]
 
+[race]
+        id=taurens
+        male_name= _ "race^Orck"
+        female_name= _ "race+female^Orck"
+        plural_name= _ "race^Orcks"
+        description= ""	# wmllint: ignore
+        num_traits=2
+        markov_chain_size=10
+		undead_variation=troll
+		ignore_global_traits=yes
+        male_names= _ "Berserker"
+        female_names= _ "Tarczowniczka"
+			{TRAIT_STRONG}
+			{TRAIT_RESILIENT}
+			{TRAIT_FEARLESS}
+			{TRAIT_OLD_HERO}
+			{TRAIT_LOYAL}
+			{TRAIT_STRONG}
+			{TRAIT_RESILIENT}
+[/race]
+
 
 #Movement Types
 [movetype]
