--- a/units/frakcja2/Grunt.cfg
+++ b/units/frakcja2/Grunt.cfg
@@ -1,8 +1,8 @@
 [unit_type]
     id=Grunt
     name= _ "Grunt"
-    race=mankind
-    image="frakcja1/Grunt/Grunt.png"
+    race=tauren
+    image="frakcja2/Grunt/Grunt.png"
     ellipse="misc/ellipse-nozoc"
     {MAGENTA_IS_THE_TEAM_COLOR}
     hitpoints=35
@@ -34,11 +34,11 @@
 		
 			start_time=-325
 			[frame]
-				image="frakcja1/Grunt/Grunt.png:75"
+				image="frakcja2/Grunt/Grunt.png:75"
 			[/frame]
 			
 			[frame]
-				image="frakcja1/Grunt/atack-anim/attack-[1~5,4,2].png:75"
+				image="frakcja2/Grunt/atack-anim/attack-[1~5,4,2].png:75"
 			[/frame]
     [/attack_anim]
 	
@@ -49,7 +49,7 @@
         [/filter_attack]
         start_time=0
         [frame]
-            image="frakcja1/Grunt/die-anim/die-[1~15].png:100"
+            image="frakcja2/Grunt/die-anim/die-[1~15].png:100"
         [/frame]
     [/death]
 [/unit_type]
