--- a/units/frakcja1/Militia-Patrol.cfg
+++ b/units/frakcja1/Militia-Patrol.cfg
@@ -1,6 +1,6 @@
 [unit_type]
-    id=Militia-Patrol
-    name= _ "Militia-Patrol"
+    id=Footman
+    name= _ "Piechór"
     race=mankind
     image="frakcja1/Militia/Militia-Patrol.png"
     ellipse="misc/ellipse-nozoc"
@@ -11,24 +11,24 @@
     experience=33
     level=1
     alignment=lawful
-    advances_to=Militia-Squad
+    advances_to=Rycerz
     cost=24
     usage=fighter
     description= _ "..."
 	[attack]	
-        name=axe
-        description=_"Axes"
+        name=sword
+        description=_"Miecz"
         type=pierce
         range=melee
-        damage=9
+        damage=8
         number=3
-        icon=attacks/axe.png
+        icon=attacks/sword-human.png
    [/attack]
     
    
   [attack_anim]
 		[filter_attack]
-            name=axe
+            name=sword
         [/filter_attack]
 		
 			start_time=-325
