--- a/units/frakcja1/Militia-Squad.cfg
+++ b/units/frakcja1/Militia-Squad.cfg
@@ -1,6 +1,6 @@
 [unit_type]
-    id=Militia-Squad
-    name= _ "Militia-Squad"
+    id=Rycerz
+    name= _ "Rycerz"
     race=mankind
     image="frakcja1/Militia/Militia-Squad.png"
     ellipse="misc/ellipse-nozoc"
@@ -17,19 +17,32 @@
     usage=fighter
     description= _ "..."
 	[attack]	
-        name=axe
-        description=_"Axes"
+        name=sword
+        description=_"Miecz"
         type=pierce
         range=melee
-        damage=10
+        damage=8
         number=4
-        icon=attacks/axe.png
+        icon=attacks/sword-steel.png
+   [/attack]
+   
+   	[attack]	
+        name=charge
+        description=_"Szarża"
+        type=pierce
+        range=melee
+        damage=12
+        number=2
+        icon=attacks/sword-steel.png
+		[specials]
+		{WEAPON_SPECIAL_CHARGE}
+		[/specials]
    [/attack]
     
    
   [attack_anim]
 		[filter_attack]
-            name=axe
+            name=sword
         [/filter_attack]
 		
 			start_time=-325
