--- a/units/frakcja1/Militia.cfg
+++ b/units/frakcja1/Militia.cfg
@@ -11,7 +11,7 @@
     experience=17
     level=0
     alignment=lawful
-    advances_to=Militia-Patrol
+    advances_to=Footman
     cost=16
     usage=fighter
     description= _ "..."
