--- a/factions/TheGoreYarn-Frakcja3.cfg
+++ b/factions/TheGoreYarn-Frakcja3.cfg
@@ -2,9 +2,9 @@
 [multiplayer_side]
     id=frakcja3
     name= _ "Nieumarli"
-    image=frakcja1/Paladyn/Paladyn.png
+    image=frakcja3/Szkielet/szkielet.png
     {MAGENTA_IS_THE_TEAM_COLOR}
     type=TheGoreYarn_Chlop
-    leader=Paladyn,,Militia-Squad
-    recruit=Worker,Priest,Militia,Militia-Patrol
+    leader=szkiel
+    recruit=szkiel
 [/multiplayer_side]
